fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,6 @@ body {
   overflow: auto;
   padding-top: 80px;
 }
+h1{
+  text-align: center;
+}
